5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4486/executions/1671_1103.log
== TEST (2019-04-28 16:59:36) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, str(pertence ao intervalo), "a", ",", "b")	
elif(b <= a)
	print (str(entradas a e b inválidas))	
else:
	print (x, str(nao pertence ao intervalo), "a", ",", "b")	
	
-- ERROR:
File "XXXX", line 6
    print (x, str(pertence ao intervalo), "a", ",", "b")	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:01:19) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, str("pertence ao intervalo"), "a", ",", "b")	
elif(b <= a)
	print (str(entradas a e b inválidas))	
else:
	print (x, str(nao pertence ao intervalo), "a", ",", "b")	
	
-- ERROR:
File "XXXX", line 7
    elif(b <= a)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:01:31) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, str("pertence ao intervalo"), "a", ",", "b")	
elif(b =< a)
	print (str(entradas a e b inválidas))	
else:
	print (x, str(nao pertence ao intervalo), "a", ",", "b")	
	
-- ERROR:
File "XXXX", line 7
    elif(b =< a)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:03:14) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, (pertence ao intervalo), a, ",", b)	
elif(b =< a)
	print ((entradas), a, (e), b, (inválidas))	
else:
	print (x, (nao pertence ao intervalo), a, ",", b)	
	
-- ERROR:
File "XXXX", line 6
    print (x, (pertence ao intervalo), a, ",", b)	
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:04:27) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b =< a)
	print ("entradas", a, "e", b, "inválidas")	
else:
	print (x, "nao pertence ao intervalo", a, ",", b)	
	
-- ERROR:
File "XXXX", line 7
    elif(b =< a)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:04:53) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a)
	print ("entradas", a, "e", b, "inválidas")	
else:
	print (x, "nao pertence ao intervalo", a, ",", b)	
	
-- ERROR:
File "XXXX", line 7
    elif(b <= a)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:06:08) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, "e", b, "inválidas")	
else:
	print (x, "nao pertence ao intervalo", a, ",", b)	
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:06:28) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, "e", b, "inválidas")	
else:
	print (x, "nao pertence ao intervalo", a, ",", b)	
	
-- EXECUTION TIME:
0.127937
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
entradas 6.5 e 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:07:10) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, "e", b, "inválidas")	
else:
	print (x, "nao pertence ao intervalo", a, ",", b)	
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:08:05) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, "e", b, "inválidas")	
else:
	print (x, "nao pertence ao intervalo", a, ",", b)	
	
-- EXECUTION TIME:
0.135986
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
entradas 6.5 e 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:10:13) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, "e", b, "inválidas")	
else:
	print (x, "nao pertence ao intervalo", a, ",", b)	
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:11:37) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b >= x >= a):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- OUTPUT:
entradas 3.0 e 4.0 inválidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:11:53) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b >= x >= a):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- OUTPUT:
entradas 3.0 e 4.0 inválidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:11:58) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b >= x >= a):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- EXECUTION TIME:
0.204386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1103/main.py", line 10, in <module>
    print ("entradas", a, "e", b, "inv\xe1lidas")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe1' in position 3: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:14:13) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(a >= x >= b or a >= b >=x):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- OUTPUT:
entradas 3.0 e 4.0 inválidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:14:20) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(a >= x >= b or a >= b >=x):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- OUTPUT:
entradas 3.0 e 4.0 inválidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:15:18) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(a >= x >= b or a >= b >=x or b >= a >= x or a == b ==c):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:15:28) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(a >= x >= b or a >= b >=x or b >= a >= x or a == b ==c):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- EXECUTION TIME:
0.276436
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:15:54) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(a >= x >= b or a >= b >=x or b >= a >= x or a == b ==c):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:16:00) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(a >= x >= b or a >= b >=x or b >= a >= x or a == b ==c):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- EXECUTION TIME:
0.136825
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:16:46) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(a >= x >= b or a >= b >= x or b >= a >= x or a == b ==c or a == b or a == x or x == b):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:16:54) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(a >= x >= b or a >= b >= x or b >= a >= x or a == b ==c or a == b or a == x or x == b):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:17:06) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(a >= x >= b or a >= b >= x or b >= a >= x or a == b ==c or a == b or a == x or x == b):
	print (x, "nao pertence ao intervalo", a, ",", b)	
else:
	print ("entradas", a, "e", b, "inválidas")
-- EXECUTION TIME:
0.137707
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:19:14) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, "e", b, "inválidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- EXECUTION TIME:
0.195751
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
entradas 6.5 e 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:19:44) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
elif(b <= a):
	print ("entradas", a, "e", b, "inválidas")

-- EXECUTION TIME:
0.18039
-- ERROR:
  File "/home/codebench/codes/1671/1103/main.py", line 9
    elif(b <= a):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:20:30) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, "e", b, "inválidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:21:30) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- EXECUTION TIME:
0.135258
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
entradas 6.5  e  3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:21:36) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:21:53) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:22:01) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- EXECUTION TIME:
0.21485
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
entradas 6.5  e  3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:47:57) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:48:27) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:48:50) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:49:02) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:49:20) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x and x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- EXECUTION TIME:
0.183058
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
entradas 6.5  e  3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:28:51) 
-- CODE:
x = float(input())
a = float(input())
b = float(input())

if (a <= x) and (x <= b):
	print (x, "pertence ao intervalo", a, ",", b)	
elif(b <= a):
	print ("entradas", a, " e ", b, "invalidas")
else:
	print (x, "nao pertence ao intervalo", a, ",", b)
-- EXECUTION TIME:
0.212972
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
entradas 6.5  e  3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
